--- a/Tests/CSS HTML Test 1/index.html
+++ b/Tests/CSS HTML Test 1/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="blue">
-        <div class="blackbox">
-
-        </div>
+    <div class="welcome">
+        <h1>Wilkommen!</h1>
+        <ul>
+            <li>Eins</li>
+            <li>Zwei</li>
+            <li>Drei</li>
+        </ul>
         <div class="bottomleft">
 
         </div>
     </div>
-    <div class="strip">
+
+    <div class="topright">
+
+    </div>
+
+    <div class="yellow">
+        <div class="green"></div>
         <div class="green"></div>
         <div class="green"></div>
         <div class="green"></div>
