--- a/Assignments/Aufgabe_ORF/index.html
+++ b/Assignments/Aufgabe_ORF/index.html
@@ -27,8 +27,8 @@
 
     </div>
     <div class="logo">
-        vorarlberg
-        <img src="orf_logo.svg" height="100%" width="100%">
+        <p class="logotext" id = "text">vorarlberg</p>
+        <img src="orf_logo.svg" height="30%" width="30%" id="image">
     </div>
     <div class="header2">
         <div class="header2left">
@@ -48,7 +48,7 @@
                 <h5 class="Rona">CORONAVIRUS</h5>
                 <h1 class="titletext" id="text">19 neue Infektionen und ein Todesopfer</h1>
             </div>
-            <div class="text"><div>
+            <div class="text" id="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit a<div>
         </div>
     </div>
 </body>
