Aufgabe ToDoList2 fertig

--- a/JavaScript_HTML/Assignments/04_ToDoList2/index.html
+++ b/JavaScript_HTML/Assignments/04_ToDoList2/index.html
@@ -16,8 +16,8 @@
         </ul>
     </div>
     <div class="input" id="content">
-        <input type="text" id="inputName">
-        <input type="text" id="inputResponsible">
+        <input type="text" id="inputName" placeholder="Task">
+        <input type="text" id="inputResponsible" placeholder="Who is responsible">
         <button class="button" id="button">Add Task</button>
     </div>
 </body>
